--- a/src/app/switchcase/switchcase.component.html
+++ b/src/app/switchcase/switchcase.component.html
@@ -1,1 +1,14 @@
-<p>switchcase works!</p>
+<p> {{ title }}</p>
+
+<div [ngSwitch]="color">
+
+  <h1 *ngSwitchCase="'red'" style="color: red;">Red Color</h1>
+  <h1 *ngSwitchCase="'green'" style="color: green;">Green Color</h1>
+  <h1 *ngSwitchCase="'blue'" style="color: blue;">Blue Color</h1>
+  <h1 *ngSwitchCase="'skyblue'" style="color: skyblue;">skyblue Color</h1>
+  <!-- Default Case  -->
+  <h1 *ngSwitchDefault>This is Unknown Color</h1>
+
+
+
+</div>
