--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 
 <!-- <app-ngfor></app-ngfor> -->
 
-<app-switchcase></app-switchcase>
+<!-- <app-switchcase></app-switchcase> -->
+
+<!-- <app-ngclass></app-ngclass> -->
+
+<!-- <app-property-b></app-property-b> -->
+
+
+<app-twoway-b></app-twoway-b>
