--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,6 @@
 <!-- <app-property-b></app-property-b> -->
 
 
-<app-twoway-b></app-twoway-b>
+<!-- <app-twoway-b></app-twoway-b> -->
+
+<app-template></app-template>
