--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
+<h1 class="routers">Angular Routing👇👇👇</h1>
 
-<!-- <app-ngfor></app-ngfor> -->
+<div class="router">
+<a class="gr" routerLink="grades">Grades</a>
+<a class="rd" routerLink="datesheet">Datesheet</a>
+<a class="bl" routerLink="result">Result</a>
+<a class="mh" routerLink="seating">Seating</a>
 
-<!-- <app-switchcase></app-switchcase> -->
-
-<!-- <app-ngclass></app-ngclass> -->
-
-<!-- <app-property-b></app-property-b> -->
-
-
-<!-- <app-twoway-b></app-twoway-b> -->
-
-<app-template></app-template>
+<br>
+<br>
+<br>
+</div>
+<router-outlet></router-outlet>
