--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+<!-- <app-pipe></app-pipe> -->
+<!-- <app-ngfor></app-ngfor> -->
+<!-- <app-ngclass></app-ngclass> -->
+<!-- <app-property-b></app-property-b> -->
+<!-- <app-switchcase></app-switchcase> -->
+<!-- <app-template></app-template> -->
+<!-- <app-twoway-b></app-twoway-b> -->
+
+
+
 <h1 class="routers">Angular Routing👇👇👇</h1>
 
 <div class="router">
